tests/macros/duplicate/validate_async.rs
fn main() {
    let q = inquisition::questions![input {
        validate_async: todo!(),
        validate_async: todo!(),
    }];
}
